fix: gallery image should align center

--- a/assets/scss/layout/gallery.scss
+++ b/assets/scss/layout/gallery.scss
@@ -7,6 +7,7 @@
 
     img {
       @include mx-auto;
+      display: block;
     }
   }
 
